--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_close">Close</string>
     <string name="nav_feed_back">Feed Back</string>
     <string name="nav_share">Share</string>
-    <string name="today">TodayEntity</string>
+    <string name="today">Today</string>
     <string name="fivedays">5 Days</string>
     <string name="fifteendays">15 Days</string>
 
